# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  27 May 2002; Daniel Robbins <drobbins@gentoo.org> bin/do*: changed "return"s
  to "exit 1".  Closes bug #3078.

*portage-1.9.13 (21 May 2002)

  21 May 2002; Grant Goodyear <g2boojum@gentoo.org> emerge.1: Updated man page.
  Thanks to carpaski@twobit.net.  

  20 May 2002; Daniel Robbins <drobbins@gentoo.org> emerge: a fix for dep
  regeneration; stale dep cache entries should now be properly regenerated.

*portage-1.9.12 (16 May 2002)

  16 May 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: the settings
  for A and AA were swapped; this has now been fixed, closing bug #1634.
  
  15 May 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed up some
  quirks in the new fetch code which were reported by Wout Mertens.  Thanks
  Wout!

*portage-1.9.11 (13 May 2002)

  13 May 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: addition of 
  third-party mirroring code.  "mirror://sourceforge/foo.tar.gz" will use the
  /usr/portage/profiles/thirdpartymirrors file to define the mirror it will
  download from.  Multiple mirrors for a single keyword can be specified on a
  single line.  This code was based on the good work of Ryan Phillips.
  
  13 May 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: (entry on behalf
  of jnelson) -- we now have new KV detection/setting code that uses
  /usr/src/linux/include/linux/version.h to determine the kernel version -- the
  right way of doing things.  KV is set to "" if the kernel is not available or
  not configured.
  
  13 May 2002; Daniel Robbins <drobbins@gentoo.org> emerge: "abspath[x]" =>
  "abspath(x)" typo fix.  Also added 2-liner to allow for "emerge unmerge" to
  specify "foo/bar-1.0" rather than requiring "=foo/bar-1.0."  Also fixed
  problems when specifying the names of actual ebuilds in /var/db/pkg to
  unmerge.
  
*portage-1.9.9 (06 May 2002) ??
